Добавил меню работы с категориями

--- a/analyze_tg.ipynb
+++ b/analyze_tg.ipynb
@@ -36,8 +36,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.270564Z",
-     "start_time": "2024-12-18T16:08:26.736526Z"
+     "end_time": "2024-12-18T16:42:43.315008Z",
+     "start_time": "2024-12-18T16:42:40.875054Z"
     }
    },
    "source": [
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.281969Z",
-     "start_time": "2024-12-18T16:08:29.270564Z"
+     "end_time": "2024-12-18T16:42:43.325697Z",
+     "start_time": "2024-12-18T16:42:43.315008Z"
     }
    },
    "cell_type": "code",
@@ -112,8 +112,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.295063Z",
-     "start_time": "2024-12-18T16:08:29.282969Z"
+     "end_time": "2024-12-18T16:42:43.338030Z",
+     "start_time": "2024-12-18T16:42:43.327664Z"
     }
    },
    "cell_type": "code",
@@ -259,8 +259,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.299621Z",
-     "start_time": "2024-12-18T16:08:29.295063Z"
+     "end_time": "2024-12-18T16:42:43.342308Z",
+     "start_time": "2024-12-18T16:42:43.339226Z"
     }
    },
    "cell_type": "code",
@@ -286,8 +286,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.312841Z",
-     "start_time": "2024-12-18T16:08:29.299621Z"
+     "end_time": "2024-12-18T16:42:43.357057Z",
+     "start_time": "2024-12-18T16:42:43.342308Z"
     }
    },
    "cell_type": "code",
@@ -530,8 +530,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.317532Z",
-     "start_time": "2024-12-18T16:08:29.312841Z"
+     "end_time": "2024-12-18T16:42:43.362672Z",
+     "start_time": "2024-12-18T16:42:43.358192Z"
     }
    },
    "cell_type": "code",
@@ -578,8 +578,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.332370Z",
-     "start_time": "2024-12-18T16:08:29.317532Z"
+     "end_time": "2024-12-18T16:42:43.376703Z",
+     "start_time": "2024-12-18T16:42:43.362672Z"
     }
    },
    "cell_type": "code",
@@ -671,8 +671,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.344980Z",
-     "start_time": "2024-12-18T16:08:29.332873Z"
+     "end_time": "2024-12-18T16:42:43.389968Z",
+     "start_time": "2024-12-18T16:42:43.376703Z"
     }
    },
    "cell_type": "code",
@@ -832,8 +832,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.972762Z",
-     "start_time": "2024-12-18T16:08:29.344980Z"
+     "end_time": "2024-12-18T16:42:44.023621Z",
+     "start_time": "2024-12-18T16:42:43.389968Z"
     }
    },
    "cell_type": "code",
@@ -856,22 +856,25 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.976459Z",
-     "start_time": "2024-12-18T16:08:29.972762Z"
+     "end_time": "2024-12-18T16:42:44.028032Z",
+     "start_time": "2024-12-18T16:42:44.024626Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def g4f_analyze(variant):\n",
+    "def g4f_analyze(content:str, model='gpt-4o'):\n",
     "    client = Client()\n",
-    "    prompt = 'Тебе даётся датафрейм продаж. Проведи анализ и сделай вывод, \\\n",
-    "    опиши всё словами. Бери в учёт все столбцы.'\n",
-    "    content = ''\n",
-    "    response = client.chat.completions.create(\n",
-    "        model=\"gpt-4o\",\n",
-    "        prompt=prompt,\n",
-    "        messages=[{\"role\": \"user\", \"content\": content}],\n",
-    "    )\n",
+    "    prompt = '''Тебе даётся датафрейм продаж. Проведи анализ и сделай вывод на русском языке, опиши всё словами. Бери в учёт все столбцы'''\n",
+    "    response = client.chat.completions.create([\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": f'{prompt}'\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": f'{content}'\n",
+    "        }\n",
+    "    ])\n",
     "    return response.choices[0].message.content"
    ],
    "id": "7fa876c156616691",
@@ -887,8 +890,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:29.984708Z",
-     "start_time": "2024-12-18T16:08:29.976459Z"
+     "end_time": "2024-12-18T16:42:44.037571Z",
+     "start_time": "2024-12-18T16:42:44.028032Z"
     }
    },
    "cell_type": "code",
@@ -941,8 +944,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:08:30.395155Z",
-     "start_time": "2024-12-18T16:08:29.985930Z"
+     "end_time": "2024-12-18T16:42:44.542939Z",
+     "start_time": "2024-12-18T16:42:44.038895Z"
     }
    },
    "cell_type": "code",
@@ -967,7 +970,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2024-12-18T16:08:30.395155Z"
+     "start_time": "2024-12-18T16:42:44.542939Z"
     }
    },
    "cell_type": "code",
@@ -1018,7 +1021,18 @@
     "        bot.send_document(message.chat.id, open('main_df.html', 'rb'))\n",
     "\n",
     "    elif message.text == 'Начать работу с данными':\n",
-    "        bot.send_message(message.chat.id, 'Начата работа с данными')\n",
+    "        user_states[message.chat.id] = 'ANALYZE_PROCESSING'\n",
+    "        \n",
+    "        markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
+    "        btn1 = types.KeyboardButton(\"Показать всю таблицу\")\n",
+    "        btn2 = types.KeyboardButton(\"Показать категории\")\n",
+    "        btn3 = types.KeyboardButton(\"Выбрать категорию для анализа\")\n",
+    "        btn4 = types.KeyboardButton(\"Вернуться в главное меню\")\n",
+    "        markup.add(btn1, btn2, btn3, btn4)\n",
+    "    \n",
+    "        txt = f\"Вы перешли в меню работы с категориями\"\n",
+    "        bot.send_message(message.chat.id, text=txt, reply_markup=markup)\n",
+    "        \n",
     "\n",
     "    elif message.text == 'Задать вопрос ИИ':\n",
     "        user_states[message.chat.id] = 'QUESTIONS_PROCESSING'\n",
@@ -1027,6 +1041,43 @@
     "        back = types.KeyboardButton(\"Вернуться в главное меню\")\n",
     "        markup.add(back)\n",
     "        bot.send_message(message.chat.id, 'Я готов отвечать на ваши вопросы!', reply_markup=markup)\n",
+    "    \n",
+    "    else:\n",
+    "        bot.send_message(message.chat.id, 'Пожалуйста нажмите на кнопку')\n",
+    "        \n",
+    "\n",
+    "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'ANALYZE_PROCESSING')\n",
+    "def analyze_processing(message):\n",
+    "    if message.text == 'Вернуться в главное меню':\n",
+    "        back_to_main_menu(message)\n",
+    "\n",
+    "    elif message.text == 'Показать всю таблицу':\n",
+    "        bot.send_message(message.chat.id, \"Отправляю вам обрезанный датафрейм в формате png и полный в формате html:\")\n",
+    "        bot.send_photo(message.chat.id, open('main_df.png','rb'))\n",
+    "        bot.send_document(message.chat.id, open('main_df.html', 'rb'))\n",
+    "\n",
+    "    elif message.text == 'Показать категории':\n",
+    "        text = 'Отправляю вам обрезанные png датафреймы категорий и полные в формате html:\\n'\n",
+    "        bot.send_message(message.chat.id, text)\n",
+    "        for category, content in categories.items():\n",
+    "            bot.send_message(message.chat.id, category)\n",
+    "            photo = content.head(5)\n",
+    "            photo.to_html(\"sub_df.html\", index=True)\n",
+    "            dfi.export(photo,\"sub_df.png\")\n",
+    "            bot.send_photo(message.chat.id, open('sub_df.png','rb'))\n",
+    "            bot.send_document(message.chat.id, open('sub_df.html', 'rb'))\n",
+    "    \n",
+    "    elif message.text == 'Выбрать категорию для анализа':\n",
+    "        pass\n",
+    "\n",
+    "    else:\n",
+    "        bot.send_message(message.chat.id, 'Пожалуйста нажмите на кнопку')\n",
+    "        \n",
+    "\n",
+    "def back_to_main_menu(message):\n",
+    "    user_states[message.chat.id] = 'MAIN_MENU'\n",
+    "    start(message)\n",
+    "        \n",
     "\n",
     "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'QUESTIONS_PROCESSING')\n",
     "def questions_processing(message):\n",
