Добавил меню выбора категории для анализа и его показ png с html

--- a/analyze_tg.ipynb
+++ b/analyze_tg.ipynb
@@ -36,8 +36,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:43.315008Z",
-     "start_time": "2024-12-18T16:42:40.875054Z"
+     "end_time": "2024-12-18T19:51:33.928120Z",
+     "start_time": "2024-12-18T19:51:31.511194Z"
     }
    },
    "source": [
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:43.325697Z",
-     "start_time": "2024-12-18T16:42:43.315008Z"
+     "end_time": "2024-12-18T19:51:33.938631Z",
+     "start_time": "2024-12-18T19:51:33.928120Z"
     }
    },
    "cell_type": "code",
@@ -112,8 +112,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:43.338030Z",
-     "start_time": "2024-12-18T16:42:43.327664Z"
+     "end_time": "2024-12-18T19:51:33.952357Z",
+     "start_time": "2024-12-18T19:51:33.938631Z"
     }
    },
    "cell_type": "code",
@@ -259,8 +259,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:43.342308Z",
-     "start_time": "2024-12-18T16:42:43.339226Z"
+     "end_time": "2024-12-18T19:51:33.957582Z",
+     "start_time": "2024-12-18T19:51:33.952357Z"
     }
    },
    "cell_type": "code",
@@ -286,8 +286,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:43.357057Z",
-     "start_time": "2024-12-18T16:42:43.342308Z"
+     "end_time": "2024-12-18T19:51:33.967109Z",
+     "start_time": "2024-12-18T19:51:33.957582Z"
     }
    },
    "cell_type": "code",
@@ -530,8 +530,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:43.362672Z",
-     "start_time": "2024-12-18T16:42:43.358192Z"
+     "end_time": "2024-12-18T19:51:33.971257Z",
+     "start_time": "2024-12-18T19:51:33.967109Z"
     }
    },
    "cell_type": "code",
@@ -578,8 +578,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:43.376703Z",
-     "start_time": "2024-12-18T16:42:43.362672Z"
+     "end_time": "2024-12-18T19:51:33.981042Z",
+     "start_time": "2024-12-18T19:51:33.971257Z"
     }
    },
    "cell_type": "code",
@@ -671,8 +671,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:43.389968Z",
-     "start_time": "2024-12-18T16:42:43.376703Z"
+     "end_time": "2024-12-18T19:51:33.990851Z",
+     "start_time": "2024-12-18T19:51:33.981042Z"
     }
    },
    "cell_type": "code",
@@ -832,8 +832,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:44.023621Z",
-     "start_time": "2024-12-18T16:42:43.389968Z"
+     "end_time": "2024-12-18T19:51:34.885567Z",
+     "start_time": "2024-12-18T19:51:33.990851Z"
     }
    },
    "cell_type": "code",
@@ -856,8 +856,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:44.028032Z",
-     "start_time": "2024-12-18T16:42:44.024626Z"
+     "end_time": "2024-12-18T19:51:34.889814Z",
+     "start_time": "2024-12-18T19:51:34.885567Z"
     }
    },
    "cell_type": "code",
@@ -890,8 +890,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:44.037571Z",
-     "start_time": "2024-12-18T16:42:44.028032Z"
+     "end_time": "2024-12-18T19:51:34.895543Z",
+     "start_time": "2024-12-18T19:51:34.889814Z"
     }
    },
    "cell_type": "code",
@@ -944,8 +944,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T16:42:44.542939Z",
-     "start_time": "2024-12-18T16:42:44.038895Z"
+     "end_time": "2024-12-18T19:51:35.359505Z",
+     "start_time": "2024-12-18T19:51:34.897545Z"
     }
    },
    "cell_type": "code",
@@ -970,7 +970,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2024-12-18T16:42:44.542939Z"
+     "start_time": "2024-12-18T19:51:35.359505Z"
     }
    },
    "cell_type": "code",
@@ -978,9 +978,12 @@
     "TOKEN = '7677363072:AAGCj1dhXNqaH-j56lEgW3BJ1HoJx8W4kcw' # сюда вставить свой токен TG бота\n",
     "bot = telebot.TeleBot(TOKEN)\n",
     "user_states = {}\n",
+    "category_global = ''\n",
     "\n",
+    "\n",
+    "# СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА\n",
     "@bot.message_handler(commands=['start'])\n",
-    "def start(message):\n",
+    "def start(message): # главная функция\n",
     "    question = False\n",
     "    \n",
     "    markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
@@ -994,9 +997,12 @@
     "    bot.send_message(message.chat.id, text=txt, reply_markup=markup)\n",
     "    \n",
     "    user_states[message.chat.id] = 'MAIN_MENU'\n",
+    "# СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА\n",
     "\n",
+    "\n",
+    "# ГЛАВНОЕ МЕНЮ # ГЛАВНОЕ МЕНЮ # ГЛАВНОЕ МЕНЮ # ГЛАВНОЕ МЕНЮ\n",
     "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'MAIN_MENU')\n",
-    "def check_buttons(message):\n",
+    "def check_buttons(message): # главная функция\n",
     "    if message.text == 'Справка о боте':\n",
     "        txt = '''   Я рад, что вы решили прочитать справку перед началом работы!\n",
     "\n",
@@ -1021,7 +1027,7 @@
     "        bot.send_document(message.chat.id, open('main_df.html', 'rb'))\n",
     "\n",
     "    elif message.text == 'Начать работу с данными':\n",
-    "        user_states[message.chat.id] = 'ANALYZE_PROCESSING'\n",
+    "        user_states[message.chat.id] = 'CATEGORY_CHECK'\n",
     "        \n",
     "        markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
     "        btn1 = types.KeyboardButton(\"Показать всю таблицу\")\n",
@@ -1032,7 +1038,6 @@
     "    \n",
     "        txt = f\"Вы перешли в меню работы с категориями\"\n",
     "        bot.send_message(message.chat.id, text=txt, reply_markup=markup)\n",
-    "        \n",
     "\n",
     "    elif message.text == 'Задать вопрос ИИ':\n",
     "        user_states[message.chat.id] = 'QUESTIONS_PROCESSING'\n",
@@ -1041,13 +1046,12 @@
     "        back = types.KeyboardButton(\"Вернуться в главное меню\")\n",
     "        markup.add(back)\n",
     "        bot.send_message(message.chat.id, 'Я готов отвечать на ваши вопросы!', reply_markup=markup)\n",
-    "    \n",
-    "    else:\n",
-    "        bot.send_message(message.chat.id, 'Пожалуйста нажмите на кнопку')\n",
-    "        \n",
+    "# ГЛАВНОЕ МЕНЮ # ГЛАВНОЕ МЕНЮ # ГЛАВНОЕ МЕНЮ # ГЛАВНОЕ МЕНЮ       \n",
     "\n",
-    "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'ANALYZE_PROCESSING')\n",
-    "def analyze_processing(message):\n",
+    "\n",
+    "# МЕНЮ ПРОСМОТРА КАТЕГОРИЙ # МЕНЮ ПРОСМОТРА КАТЕГОРИЙ\n",
+    "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'CATEGORY_CHECK')\n",
+    "def analyze_processing(message): # главная функция\n",
     "    if message.text == 'Вернуться в главное меню':\n",
     "        back_to_main_menu(message)\n",
     "\n",
@@ -1068,27 +1072,116 @@
     "            bot.send_document(message.chat.id, open('sub_df.html', 'rb'))\n",
     "    \n",
     "    elif message.text == 'Выбрать категорию для анализа':\n",
-    "        pass\n",
-    "\n",
-    "    else:\n",
-    "        bot.send_message(message.chat.id, 'Пожалуйста нажмите на кнопку')\n",
+    "        go_to_choose_category_menu(message)\n",
     "        \n",
     "\n",
-    "def back_to_main_menu(message):\n",
+    "def back_to_main_menu(message): # вернуться в главное меню\n",
     "    user_states[message.chat.id] = 'MAIN_MENU'\n",
     "    start(message)\n",
-    "        \n",
+    "    \n",
+    "def go_to_choose_category_menu(message): # переход в меню выбора категории\n",
+    "    user_states[message.chat.id] = 'CATEGORY_CHOOSE'\n",
     "\n",
+    "    markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
+    "    btn1 = types.KeyboardButton(\"Косметика\")\n",
+    "    btn2 = types.KeyboardButton('Продукты питания')\n",
+    "    btn3 = types.KeyboardButton('Одежда')\n",
+    "    btn4 = types.KeyboardButton('Электроника')\n",
+    "    back = types.KeyboardButton(\"Вернуться в меню работы с категориями\")\n",
+    "    markup.add(btn1, btn2, btn3, btn4, back)\n",
+    "    bot.send_message(message.chat.id, 'Вы перешли в меню выбора конкретной категории', reply_markup=markup)\n",
+    "# МЕНЮ ПРОСМОТРА КАТЕГОРИЙ # МЕНЮ ПРОСМОТРА КАТЕГОРИЙ\n",
+    "\n",
+    "\n",
+    "# ВЫБОР КАТЕГОРИИ # ВЫБОР КАТЕГОРИИ # ВЫБОР КАТЕГОРИИ\n",
+    "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'CATEGORY_CHOOSE')\n",
+    "def category_choose(message): # главная функция\n",
+    "    if message.text == 'Вернуться в меню работы с категориями':\n",
+    "        back_to_category_check_menu(message)\n",
+    "\n",
+    "    elif message.text in ('Косметика','Продукты питания','Одежда','Электроника'):\n",
+    "        go_to_category_processing(message, message.text)\n",
+    "\n",
+    "\n",
+    "def back_to_category_check_menu(message): # вернуться  в меню работы с категориями\n",
+    "    user_states[message.chat.id] = 'CATEGORY_CHECK'\n",
+    "    markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
+    "    btn1 = types.KeyboardButton(\"Показать всю таблицу\")\n",
+    "    btn2 = types.KeyboardButton(\"Показать категории\")\n",
+    "    btn3 = types.KeyboardButton(\"Выбрать категорию для анализа\")\n",
+    "    btn4 = types.KeyboardButton(\"Вернуться в главное меню\")\n",
+    "    markup.add(btn1, btn2, btn3, btn4)\n",
+    "\n",
+    "    txt = \"Вы перешли в меню работы с категориями\"\n",
+    "    \n",
+    "    bot.send_message(message.chat.id, text=txt, reply_markup=markup)\n",
+    "    analyze_processing(message)\n",
+    "\n",
+    "\n",
+    "def go_to_category_processing(message, category): # переход в меню анализа категории\n",
+    "    user_states[message.chat.id] = 'CATEGORY_PROCESSING'\n",
+    "    \n",
+    "    markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
+    "    btn1 = types.KeyboardButton(\"Показать датафрейм\")\n",
+    "    btn2 = types.KeyboardButton(\"Нарисовать графики по датафрейму\")\n",
+    "    btn3 = types.KeyboardButton(\"Выбрать 3 столбца для анализа\")\n",
+    "    back = types.KeyboardButton(\"Вернуться в меню выбора категории\")\n",
+    "    markup.add(btn1, btn2, btn3, back)\n",
+    "\n",
+    "    global category_global\n",
+    "    category_global = category\n",
+    "    txt = f\"Вы перешли в меню анализа категории '{category}'\"\n",
+    "    bot.send_message(message.chat.id, text=txt, reply_markup=markup)\n",
+    "# ВЫБОР КАТЕГОРИИ # ВЫБОР КАТЕГОРИИ # ВЫБОР КАТЕГОРИИ \n",
+    "\n",
+    "\n",
+    "# АНАЛИЗ КАТЕГОРИИ # АНАЛИЗ КАТЕГОРИИ # АНАЛИЗ КАТЕГОРИИ\n",
+    "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'CATEGORY_PROCESSING')\n",
+    "def category_processing(message): # главная функция\n",
+    "    if message.text == 'Вернуться в меню выбора категории':\n",
+    "        back_to_category_choose_menu(message)\n",
+    "    elif message.text == 'Показать датафрейм':\n",
+    "        bot.send_message(message.chat.id, category_global)\n",
+    "        photo = categories[category_global].head(5)\n",
+    "        photo.to_html(\"sub_df.html\", index=True)\n",
+    "        dfi.export(photo,\"sub_df.png\")\n",
+    "        bot.send_photo(message.chat.id, open('sub_df.png','rb'))\n",
+    "        bot.send_document(message.chat.id, open('sub_df.html', 'rb'))\n",
+    "    elif message.text == 'b':\n",
+    "        pass\n",
+    "    elif message.text == 'c':\n",
+    "        pass\n",
+    "    elif message.text == 'd':\n",
+    "        pass\n",
+    "\n",
+    "def back_to_category_choose_menu(message): # возврат в меню выбора категории\n",
+    "    user_states[message.chat.id] = 'CATEGORY_CHOOSE'\n",
+    "    \n",
+    "    markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
+    "    btn1 = types.KeyboardButton(\"Косметика\")\n",
+    "    btn2 = types.KeyboardButton('Продукты питания')\n",
+    "    btn3 = types.KeyboardButton('Одежда')\n",
+    "    btn4 = types.KeyboardButton('Электроника')\n",
+    "    back = types.KeyboardButton(\"Вернуться в меню работы с категориями\")\n",
+    "    markup.add(btn1, btn2, btn3, btn4, back)\n",
+    "    \n",
+    "    bot.send_message(message.chat.id, 'Вы перешли в меню выбора конкретной категории', reply_markup=markup)\n",
+    "    category_choose(message)\n",
+    "# АНАЛИЗ КАТЕГОРИИ # АНАЛИЗ КАТЕГОРИИ # АНАЛИЗ КАТЕГОРИИ\n",
+    "\n",
+    "\n",
+    "# ОТВЕТЫ ИИ НА ВОПРОСЫ # ОТВЕТЫ ИИ НА ВОПРОСЫ # ОТВЕТЫ ИИ НА ВОПРОСЫ\n",
     "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'QUESTIONS_PROCESSING')\n",
-    "def questions_processing(message):\n",
+    "def questions_processing(message): # главная функция\n",
     "    if message.text == \"Вернуться в главное меню\":\n",
-    "        back_to_main_menu(message)\n",
+    "        back_to_main_menu2(message)\n",
     "    else:\n",
     "        bot.send_message(message.chat.id, text=g4f_question(message.text))\n",
     "\n",
-    "def back_to_main_menu(message):\n",
+    "def back_to_main_menu2(message): # возврат в главное меню\n",
     "    user_states[message.chat.id] = 'MAIN_MENU'\n",
     "    start(message)\n",
+    "# ОТВЕТЫ ИИ НА ВОПРОСЫ # ОТВЕТЫ ИИ НА ВОПРОСЫ # ОТВЕТЫ ИИ НА ВОПРОСЫ\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
