добавил немного комментариев в код

--- a/analyze_tg.ipynb
+++ b/analyze_tg.ipynb
@@ -276,7 +276,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "В качестве бонуса добавим функцию для ответа на (почти)любые вопросы, а также напишем небольшую проверку полученного ответа и ограничим количество попыток генерации.",
+   "source": "В качестве бонуса добавим функцию для ответа на (почти)любые вопросы, добавим промпт, дабы бот мог отвечать на вопросы по поводу функционала, а также напишем небольшую проверку полученного ответа и ограничим количество попыток генерации.",
    "id": "95df886e9f626ccf"
   },
   {
@@ -397,7 +397,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Остаётся только самое сложное - написание телеграм бота с полноценным меню. Комментарии каждого потенциально сложного для понимания блока кода присутствуют.",
+   "source": "Остаётся только самое сложное - написание телеграм бота с полноценным меню. Лучшее что мы здесь сделаем, это используем состояние пользователя для создания меню с переходами дабы не обмазываться лишними операторами, а также напишем комментарии к каждому потенциально сложному блоку кода и не будем путать ни себя, ни людей которые будут работать с нашим кодом.",
    "id": "273d5316a9fdc133"
   },
   {
@@ -410,13 +410,13 @@
    "source": [
     "TOKEN = '7677363072:AAGCj1dhXNqaH-j56lEgW3BJ1HoJx8W4kcw' # сюда вставить свой токен TG бота\n",
     "bot = telebot.TeleBot(TOKEN)\n",
-    "user_states = {} \n",
+    "user_states = {} # состояния пользователей для контролирования их передвижения по меню\n",
     "category_global = ''\n",
     "\n",
     "\n",
     "# СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА\n",
     "@bot.message_handler(commands=['start'])\n",
-    "def start(message): # главная функция\n",
+    "def start(message): # главная функция. тут мы создаём кнопки нашего меню и приветствуем пользователя\n",
     "    markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
     "    btn1 = types.KeyboardButton(\"Справка о боте\")\n",
     "    btn2 = types.KeyboardButton(\"Показать таблицу\")\n",
@@ -427,14 +427,19 @@
     "    txt = f\"Привет, {message.from_user.first_name}! Я бот для анализа данных датафреймов, просмотрите мой функционал в командах.\"\n",
     "    bot.send_message(message.chat.id, text=txt, reply_markup=markup)\n",
     "    \n",
-    "    user_states[message.chat.id] = 'MAIN_MENU'\n",
+    "    user_states[message.chat.id] = 'MAIN_MENU' # меняем состояние пользователя для перехода в другое меню\n",
     "# СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА # СТАРТОВАЯ КОМАНДА\n",
     "\n",
     "\n",
     "# ГЛАВНОЕ МЕНЮ # ГЛАВНОЕ МЕНЮ # ГЛАВНОЕ МЕНЮ # ГЛАВНОЕ МЕНЮ\n",
-    "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'MAIN_MENU')\n",
+    "@bot.message_handler(func=lambda message: user_states.get(message.chat.id) == 'MAIN_MENU') # проверяем находится ли пользователь в нужном состоянии\n",
     "def check_buttons(message): # главная функция\n",
-    "    if message.text == 'Справка о боте':\n",
+    "    \"\"\"\n",
+    "    В данном блоке кода мы будем использовать операторы для проверки нажатия определённой кнопки путём прочтения сообщения пользователя.\n",
+    "    Справка нужна для краткого объяснения пользователю принципа работы бота и будет выводиться по желанию, ровно как и таблица основного датафрейма.\n",
+    "    Также мы реализуем переход пользователя между блоками меню, создавая новые кнопки и меняя состояние пользователя по id чата.\n",
+    "    \"\"\"\n",
+    "    if message.text == 'Справка о боте': # вывод справки\n",
     "        txt = '''   Я рад, что вы решили прочитать справку перед началом работы!\n",
     "\n",
     "    Мой функционал включает в себя анализ и рисование графиков по тем данным что я имею.\n",
@@ -452,12 +457,12 @@
     "из-за частых запросов. Обязательно обождите обработки вашего запроса перед созданием нового!'''\n",
     "        bot.send_message(message.chat.id, txt)\n",
     "\n",
-    "    elif message.text == 'Показать таблицу':\n",
+    "    elif message.text == 'Показать таблицу': # вывод таблицы в формате png и html\n",
     "        bot.send_message(message.chat.id, \"Отправляю вам обрезанный датафрейм в формате png и полный в формате html:\")\n",
     "        bot.send_photo(message.chat.id, open('main_df.png','rb'))\n",
     "        bot.send_document(message.chat.id, open('main_df.html', 'rb'))\n",
     "\n",
-    "    elif message.text == 'Начать работу с данными':\n",
+    "    elif message.text == 'Начать работу с данными': # переход в следующее меню. в дальнейшем для этого мы будем использовать функции\n",
     "        user_states[message.chat.id] = 'CATEGORY_CHECK'\n",
     "        \n",
     "        markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
@@ -470,7 +475,7 @@
     "        txt = f\"Вы перешли в меню работы с категориями\"\n",
     "        bot.send_message(message.chat.id, text=txt, reply_markup=markup)\n",
     "\n",
-    "    elif message.text == 'Задать вопрос ИИ':\n",
+    "    elif message.text == 'Задать вопрос ИИ': # небольшой бонус нашего бота в качестве ответа на вопросы\n",
     "        user_states[message.chat.id] = 'QUESTIONS_PROCESSING'\n",
     "\n",
     "        markup = types.ReplyKeyboardMarkup(resize_keyboard=True)\n",
@@ -620,7 +625,7 @@
     "# ОТВЕТЫ ИИ НА ВОПРОСЫ # ОТВЕТЫ ИИ НА ВОПРОСЫ # ОТВЕТЫ ИИ НА ВОПРОСЫ\n",
     "\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "if __name__ == '__main__': # запускаем бота и отключаем ему возможность закончить работу\n",
     "    bot.polling(none_stop=True)"
    ],
    "id": "3ce7873592913cb6",
